stream for big files

--- a/NodeJS/index.html
+++ b/NodeJS/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenu sur mon site</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bienvenue sur mon site</title>
+  </head>
+  <body>
     <header>
-        <h1>Bienvenue sur mon site {{ name }}</h1>
+      <h1>Bienvenue sur mon site {{ name }}</h1>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, a, inventore voluptatem consequatur voluptate adipisci hic ad aperiam vitae quas, asperiores esse fugiat. Vitae aspernatur maxime quibusdam quas esse ducimus?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, a,
+        inventore voluptatem consequatur voluptate adipisci hic ad aperiam vitae
+        quas, asperiores esse fugiat. Vitae aspernatur maxime quibusdam quas
+        esse ducimus?
+      </p>
     </main>
-</body>
+    <footer>
+      <p>Bas de page</p>
+    </footer>
+  </body>
 </html>
